added more sites

--- a/about.html
+++ b/about.html
@@ -24,34 +24,49 @@
     <link href="css/footer.css" rel="stylesheet">
 </head>
 
-<div class="above-nav">
-    <div class="container">
-        <!-- <img src="img/logo.png" alt=""> -->
-    </div>
-</div>
+
 <!--Navbar-->
-<nav class="nav">
-  <div class="container">
-      <div class="logo">
-          <a href="#"><img src="img/logo-name.png" alt=""></a>
+<section class="nav-bar">
+    <div class="nav-container">
+      <div class="brand">
+        <a href="index.html"><img src="img/logo-name.png"></a>
       </div>
-      <div id="mainListDiv" class="main_list">
-          <ul class="navlinks">
-              <li><a class="active" href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="portfolio.html">Portfolio</a></li>
-              <!-- <li><a href="academy.html">Al Academy</a></li> -->
-              <li><a href="contact.html">Contact</a></li>
-          </ul>
-      </div>
-      <span class="navTrigger">
-          <i></i>
-          <i></i>
-          <i></i>
-      </span>
-  </div>
-</nav>
+      <nav>
+        <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
+        <ul class="nav-list">
+          <li>
+            <a href="index.html">Home</a>
+          </li>
+          <li>
+            <a href="#!">Service</a>
+                  <ul class="nav-dropdown">
+              <li>
+                <a href="local-seo.html">SEO</a>
+              </li>
+              <li>
+                <a href="google-ranking.html">Google Ranking</a>
+              </li>
+              <li>
+                <a href="pay-per-click.html">Pay Per Click</a>
+              </li>
+              <li>
+                <a href="website-audit.html">Website Audit</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href="about.html">About</a>
+          </li>
+          <li>
+            <a href="portfolio.html">Portfolio</a>
+          </li>
+          <li>
+            <a href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </section>
 <!-- End of Navbar -->
 
 
@@ -172,6 +187,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://kit.fontawesome.com/ffdae726c5.js" crossorigin="anonymous"></script>
+<script src="js/navbar.js"></script>
 <script src="js/scripts.js"></script>
 
 </body>
