--- a/pay-per-click.html
+++ b/pay-per-click.html
@@ -24,33 +24,49 @@
     <link href="css/footer.css" rel="stylesheet">
 </head>
 
-<div class="above-nav">
-    <div class="container">
-        <!-- <img src="img/logo.png" alt=""> -->
-    </div>
-</div>
+
 <!--Navbar-->
-<nav>
-    <input type="checkbox" id="check">
-    <label for="check" class="checkbtn">
-      <i class="fas fa-bars"></i>
-    </label>
-    <label class="logo"><img src="img/logo-name.png" alt=""></label>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="#">Services</a>
-        <ul class="dropdown">
-            <li><a href="">SEO</a></li>
-            <li><a href="">Pay Per Click</a></li>
-            <li><a href="">Google Ranking</a></li>
-            <li><a href="">Website Audit</a></li>
+<section class="nav-bar">
+    <div class="nav-container">
+      <div class="brand">
+        <a href="index.html"><img src="img/logo-name.png"></a>
+      </div>
+      <nav>
+        <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
+        <ul class="nav-list">
+          <li>
+            <a href="index.html">Home</a>
+          </li>
+          <li>
+            <a href="#!">Service</a>
+                  <ul class="nav-dropdown">
+              <li>
+                <a href="local-seo.html">SEO</a>
+              </li>
+              <li>
+                <a href="google-ranking.html">Google Ranking</a>
+              </li>
+              <li>
+                <a href="pay-per-click.html">Pay Per Click</a>
+              </li>
+              <li>
+                <a href="website-audit.html">Website Audit</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href="about.html">About</a>
+          </li>
+          <li>
+            <a href="portfolio.html">Portfolio</a>
+          </li>
+          <li>
+            <a href="contact.html">Contact</a>
+          </li>
         </ul>
-      </li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="portfolio.html">Portfolio</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
+      </nav>
+    </div>
+  </section>
 <!-- End of Navbar -->
 
 
@@ -144,6 +160,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://kit.fontawesome.com/ffdae726c5.js" crossorigin="anonymous"></script>
 <script src="js/scripts.js"></script>
+<script src="js/navbar.js"></script>
 
 </body>
 </html>
