--- a/portfolio.html
+++ b/portfolio.html
@@ -155,8 +155,8 @@
                 <div class="col-lg-2 col-md-6 footer-links">
                     <h4>Links</h4>
                     <ul>
-                        <li><a href="">Careers</a></li>
-                        <li><a href="seo.html">About SEO</a></li>
+                      <li><a href="seo.html">About SEO</a></li>
+                      <li><a href="career.html">Careers</a></li>
                         <li><a href=""></a></li>
                     </ul>
                 </div>  
