--- a/contact.html
+++ b/contact.html
@@ -74,51 +74,11 @@
 <!-- Container 1 -->
 <section id="top-container">
     <div class="container">
-        <h2>Choose Your Plan</h2>
-
-        <p>What service will you be requesting?</p>
-
-        <p>How long will this project be?</p>
-
-
-        <p>How would you like us to work?</p>
-
-
-        <p>Would you like a free web crawl?</p>
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfQRjJQVxs7Ek_rUgL4rU7GLZyxjgdr8ooSKahZNk1nWajlcQ/viewform?embedded=true" width="440" height="1500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
     </div>
 </section>
 <!-- End of Container 1 -->
-
-
-<!-- Container 2 -->
-<!-- <section id="bottom-container">
-    <div class="container">
-        <div class="row">
-            <div class="col s3 m3 13 center-align">
-                <img class="image" src="img/ppc.png" alt="">
-            </div>
-            <div class="col s3 m3 13 center-align">
-                <h2 class="header">SEO & PPC</h2>
-                <p class="header-p">search engine optimization & pay per click</p>
-                <p><b>SEO:</b> Is the science of building traffic for free by achieving high rankings in the natural search results.</p>
-                <p><b>PPC:</b> You can pay for traffic using the PPC advertising programs provided by Google Adwords, Yahoo Search 
-                    Marketing and others. They enable you to display ads in the sponsored results section of each search engine's 
-                    results page. Then, you pay a fee -- based on how competitive your chosen keyword is.</p>
-            </div>
-        </div>
-    </div>
-</section> -->
-<!-- End of Container 2 -->
-
-
-
-
-
-
-
-
-
 
 
 <!-- Scroll up -->
