--- a/index.html
+++ b/index.html
@@ -97,18 +97,18 @@
 <!-- Container 2 -->
 <div class="container" id="container2">
   <!-- just to make scrolling effect possible -->
-<h2 class="myH2">Best in Class SEO & PPC Services - Since 2017</h2>
-  <p class="myP">
+<h2 class="header">Best in Class SEO & PPC Services - Since 2017</h2>
+  <p class="header-p">
       If you are looking for a Brave and Bold search engine marketing agency, you have found the right 
       gorilla for the job. We have been honing our skills our work speaks for itself. This is exactly why our clients 
       stay engaged with a month-to-month retainer. If we do not perform, we do not get paid.
     </p>
-    <p class="myP">
+    <p class="header-p">
         Clients prefer ruthless and relentless over boring and tasteless. We deliver results, generate revenue, and stay on 
         top of market changes. For prospective new clients, We will sit down with your team and find out the best direction 
         for your company to go.
     </p>
-    <p class="myP">
+    <p class="header-p">
         Just give us a call today. Expect a genius gorilla to answer the phone and help you understand what our team can do to 
         kickstart or get your online marketing campaign back on track.
     </p>
