--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,7 @@
         <label class="ss-q-item-label" for="entry_1166974658"><div class="ss-q-title">What service will you be requesting?
         <label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
         <span class="ss-required-asterisk" aria-hidden="true"></span></div>
-        <div class="ss-q-help ss-secondary-text" dir="auto"></div></label>
+        <div class="ss-q-help ss-secondary-text" dir="auto"></div></label><br>
       <!-- What service will you be requesting?   -->
         <select name="entry.1166974658" id="entry_1166974658" aria-label="What service will you be requesting?  " aria-required="true" required=""><option value=""></option>
         <option value="SEO &amp; PPC">SEO &amp; PPC</option> <option value="Graphic Design">Graphic Design</option> <option value="Online Marketing">Online Marketing</option> <option value="PR">PR</option> <option value="Videography">Videography</option> <option value="Photography">Photography</option></select>
@@ -122,7 +122,7 @@
         <label class="ss-q-item-label" for="entry_839337160"><div class="ss-q-title">How long will this project be?
         <label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
         <span class="ss-required-asterisk" aria-hidden="true"></span></div>
-        <div class="ss-q-help ss-secondary-text" dir="auto"></div></label>
+        <div class="ss-q-help ss-secondary-text" dir="auto"></div></label><br>
       <!-- How would you like us to work?   -->
         <select name="entry.839337160" id="entry_839337160" aria-label="How long will this project be?  " aria-required="true" required=""><option value=""></option>
         <option value="Free Audit">Free Audit</option> <option value="3 - 6 Weeks">3 - 6 Weeks</option> <option value="7 - 22 Weeks">7 - 22 Weeks</option> <option value="22 - 35 Weeks">22 - 35 Weeks</option> <option value="52 - 104 Weeks">52 - 104 Weeks</option></select>
@@ -131,7 +131,7 @@
         <label class="ss-q-item-label" for="entry_1731452186"><div class="ss-q-title">How would you like us to work?               
         <label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
         <span class="ss-required-asterisk" aria-hidden="true"></span></div>
-        <div class="ss-q-help ss-secondary-text" dir="auto"></div></label>
+        <div class="ss-q-help ss-secondary-text" dir="auto"></div></label><br>
       <!-- Would you like a free web crawl?   -->
         <select name="entry.1731452186" id="entry_1731452186" aria-label="How would you like us to work?  " aria-required="true" required=""><option value=""></option>
         <option value="Remote">Remote</option> <option value="On Location">On Location</option></select>
@@ -140,7 +140,7 @@
         <label class="ss-q-item-label" for="entry_1046153726"><div class="ss-q-title">Would you like a free web crawl?
         <label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
         <span class="ss-required-asterisk" aria-hidden="true"></span></div>
-        <div class="ss-q-help ss-secondary-text" dir="auto"></div></label>
+        <div class="ss-q-help ss-secondary-text" dir="auto"></div></label><br>
         
         <select name="entry.1046153726" id="entry_1046153726" aria-label="Would you like a free web crawl?  " aria-required="true" required=""><option value=""></option>
         <option value="Accept Free Web Crawl">Accept</option> <option value="Decline Free Web Crawl">Decline</option></select>
